Added basic designer framework and temporary buttons + inital calculation methods

--- a/FlowTimeConverter/FlowTimeConverter.csproj
+++ b/FlowTimeConverter/FlowTimeConverter.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Logic\Constants.cs" />
     <Compile Include="Logic\ReusableFunctions.cs" />
+    <Compile Include="Logic\TeachyTV.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
